@@ -1,5 +1,10 @@
 2014-01-09  Tom Tromey  <tromey@redhat.com>
 
+	* btrace.c: Include defs.h.
+	* common/btrace-common.h: Don't include server.h or defs.h.
+
+2014-01-09  Tom Tromey  <tromey@redhat.com>
+
 	* common/linux-ptrace.c: Don't include server.h or defs.h; update
 	includes.
 
